# deep-cuts

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  fam.toml  package-lock.json  package.json  tsconfig.json  vite.config.js
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 01_app_settings.sql  02_watched_directories.sql  03_tracks.sql  04_track_passes.sql  05_audio_embeddings.sql  06_track_coords.sql  07_essentia_columns.sql  08_track_passes_version.sql  09_bpm_raw.sql  10_qwen_columns.sql  11_description_embeddings.sql  12_silence_columns.sql  13_track_coords_music_only.sql  14_track_coords_algorithm.sql  15_track_passes_raw_result.sql  16_stale_flag.sql  17_acoustid.sql  18_playlists.sql  19_chat_history.sql  20_tags.sql  21_track_tags_score.sql  22_track_tags_discard.sql  23_user_tags_and_suppressions.sql  24_waveform_sax.sql  25_waveform_fingerprint.sql  26_sax_alignment.sql  27_sax_alignment_segments.sql  28_structure_cluster.sql  29_drop_waveform_fingerprint.sql  30_structure_clusters.sql  31_sax_alignment_boundaries.sql  32_dsp_onsets.sql
src-tauri/src/: acoustid.rs  analysis.rs  bpm.rs  classifier.rs  database.rs  dsp.rs  embeddings.rs  error.rs  hardware.rs  lib.rs  llama.rs  main.rs  metrics_database.rs  models.rs  spectrogram.rs
src-tauri/tests/: download_tests.rs
tools/: agy_coordination_adapter.py  analyze_tags_tfidf.py  attribution_check.py  bach_vs_metallica.py  bundle-llama-server.sh  ccrep_ledger.sh  ccrep_ledger_cli.py  ccrep_sync.py  ccrep_test.sh  check_embeddings.py  clean_orphan_embeddings.py  clear_embeddings.py  collab.fish  collab_agent.py  collab_hub.py  collab_mcp.sh  collab_mcp_cli.py  diagnostic_salami_phase1.py  diagnostic_salami_phase1_results.json  download_fpcalc.py  download_llama_server.py  download_models.py  evaluate_f_score.py  evaluate_f_score_dtw.py  evaluate_qwen_clap.py  evaluate_regex_selectivity.py  evaluate_salami_boundaries.py  evaluate_salami_difficulty.py  evaluate_salami_mir_eval.py  evaluate_salami_normalized.py  evaluate_salami_phase0.py  evaluate_salami_phase1a.py  evaluate_salami_phase1b.py  evaluate_salami_phase1b_results.json  evaluate_salami_phase1c.py  evaluate_salami_phase1c_results.json  evaluate_salami_phase1d.py  evaluate_salami_phase1d_results.json  evaluate_salami_phase1e.py  evaluate_salami_phase1e_cv.py  (+44 more)
tools/ccrep/: KNOWN_ISSUES.md  README.md  __init__.py  executor.py  ledger.py  profiles.py  reducer.py  schemas.py  server.py  store.py  (+5 more)
(+352 files in other folders)
