[package]
name = "deep-cuts"
version = "0.1.4"
description = "Desktop Audio Intelligence Platform"
authors = ["Roberto Lupi"]
license = "AGPL-3.0"
repository = "https://github.com/robertolupi/deep-cuts"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "deep_cuts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset", "test"] }
bitflags = "=2.11.1"
tauri-plugin-drag = "2.1.1"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
rusqlite_migration = "2.4.0"
sqlite-vec = "0.1"
rfd = "0.14"
lofty = "0.21.1"
walkdir = "2.5.0"
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2", features = ["json"] }
symphonia = { version = "0.5.4", features = ["all"] }
ebur128 = "0.1"
rustfft = "6"
rag-umap = "0.0.0"
faer = "0.24"
# Keep `download-binaries` for now so local and packaged builds have a pinned ONNX Runtime.
# Revisit this if the app vendors ORT explicitly or adds a runtime installer/check.
ort = { version = "2.0.0-rc.9", default-features = false, features = ["copy-dylibs", "std", "ndarray", "download-binaries", "tls-native"] }
rubato = "0.15"
ndarray = { version = "0.15", features = ["serde"] }
tokenizers = "0.20"
keepawake = "0.4.3"
base64 = "0.22"
semver = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["sync", "time"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
